# welead

./: .env  .gitignore  .htaccess  LICENSE  Makefile  README.md  db.sqlite3  gunicorn_conf.py  main.py  pyproject-a.toml  pyproject.toml
.github/workflows/: qa.yml
apps/authentication/: urls.py
apps/authentication/adapters/: SocialAccountAdapter.py  __init__.py
apps/authentication/admin/: UserAdmin.py  __init__.py
apps/authentication/enums/: UserRole.py  __init__.py
apps/authentication/managers/: UserManager.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/models/: User.py
apps/authentication/services/: EmailService.py  SMSService.py  UserService.py  __init__.py
apps/authentication/tests/: auth.rest  http-client.private.env.json
apps/authentication/views/: V1Auth.py  V1Profile.py  __init__.py
apps/events/: apps.py
apps/events/admin/: AudienceAdmin.py  EventAdmin.py  EventLabelAdmin.py  SponsorAdmin.py  __init__.py
apps/events/migrations/: 0001_initial.py  0002_event_audiences.py  0003_event_slug.py  0004_alter_event_slug.py
apps/events/models/: Audience.py  Event.py  EventLabel.py  Sponsor.py  __init__.py
apps/events/services/: AudienceService.py  EventService.py  __init__.py
apps/main/: urls.py
apps/main/admin/: BannerAdmin.py  __init__.py
apps/main/enums/: BannerPage.py  __init__.py
apps/main/migrations/: 0001_initial.py
apps/main/models/: Banner.py  __init__.py
apps/settings/: urls.py
core/: settings.py  urls.py
static/: manifest.webmanifest
static/js/common/: api.js  (+6 more)
vvecon/zorion/: App.py  apps.py
(+141 files in other folders)
